--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,14 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* 
+                  
+
+
+
+                  {--------------}
+
+                     */
